src/components/welcome/welcome.styles.sass
//IMPORTING VARIABLES 
@import '../../configs/styles/breakpoints'
@import '../../configs/styles/colors'


//COMPONENT RULES    
.welcome
    background: 
    min-height: 70vh
    position: relative

    .title
        font-family: 'Parisienne', cursive;
        font-size: 500%
        padding: 4rem

        @media only  screen and ( max-width: $breakpoint-mobile-header )
            font-size: 300%

    .subtitle
        text-align: center
        font-size: 300%
        color: $color-welcome-subtitle
        margin: 2rem 0
        padding: 0 1rem

        @media only  screen and ( max-width: $breakpoint-large-desktop  )
            font-size: 150%
            padding: 0 .5rem


    .box
        margin-top: 2rem
        padding: 1rem 9rem
        margin-bottom: 6rem

        @media only  screen and ( max-width: $breakpoint-large-desktop  )
            padding: 1rem 0rem 1rem 2rem 

        .copy
            color: $color-welcome-copy
            @media only  screen and ( max-width: $breakpoint-large-desktop  )
                padding-right: .3rem
                padding-left: 1rem

        .welcome-pt,
        .welcome-en
            font-size: 170%
            line-height: 160%

        .welcome-en
            font-style: italic
            line-height: 170%

